project01 초안 수정

--- a/_posts/2022-12-30-냉장고-집사.markdown
+++ b/_posts/2022-12-30-냉장고-집사.markdown
@@ -4,7 +4,7 @@ title: 냉장고 집사
 date: 2022-12-30 00:00:00 +0300
 image: project01/project01_cover.jpg
 tags: TeamProject
-description: 언제 어디서나 쉽게 냉장고의 식재료를 확인하고, 식재료 현황을 바탕으로 레시피를 추천해 효율적인 관리를 도와주는 서비스
+description: 언제 어디서나 쉽게 냉장고의 식재료를 확인하고 관리할 수 있는 서비스. 유통기한 등 식재료 현황을 사용자에게 알리고, 보관 중인 식료품을 바탕으로 레시피를 추천해 효율적인 냉장고 자원 활용을 돕는다.
 ---
 
 ## About
